--- a/_source_/Makefile
+++ b/_source_/Makefile
@@ -3,3 +3,11 @@ all:
 	rm ../.buildinfo
 	rm -R ../.doctrees
 	echo "" > ../.buildinfo
+	./strip_dates.py ..
+
+clean:
+	find .. -maxdepth 1 -mindepth 1 -not -name '.*' -a -not -name '_?*_'  | xargs -r rm -rf;
+	rm -f ../.buildinfo
+	rm -Rf ../.doctrees
+
+.PHONY: clean
