--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,25 +14,25 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: '3.6'
+          python-version: '3.9'
           architecture: 'x64'
 
       - name: Cache dependencies
         uses: actions/cache@v1
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r ./requirements.txt
+          python3 -m pip install --upgrade poetry
+          poetry install
 
       - run: |
-          python3 -m sphinx -E -b html . _build
-          python3 strip_dates.py _build
+          poetry run python  -m sphinx -E -b html . _build
+          poetry run python  strip_dates.py _build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
