--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,11 @@ name = "lazka.github.io"
 version = "0.1.0"
 description = ""
 authors = ["Christoph Reiter"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9"
-Sphinx = "^7.2.6"
+python = "^3.10"
+Sphinx = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
-sphinx-autobuild = "^2021.3.14"
+sphinx-autobuild = "^2024.10.3"
