--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,31 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.10'
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade poetry
-          poetry install --only main
+          python3 -m pip install --upgrade uv
+          uv sync --no-dev
 
       - run: |
-          poetry run python  -m sphinx -E -b html . _build
+          uv run --no-sync sphinx-build -E -b html . _build
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./_build
 
