--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
-[tool.poetry]
+[project]
 name = "lazka.github.io"
 version = "0.1.0"
 description = ""
-authors = ["Christoph Reiter"]
-package-mode = false
+authors = [{ name = "Christoph Reiter" }]
+requires-python = ">=3.12"
+dependencies = ["Sphinx>=8.1.3,<9"]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-Sphinx = "^8.1.3"
+[dependency-groups]
+dev = ["sphinx-autobuild==2025.8.25"]
 
-[tool.poetry.dev-dependencies]
-sphinx-autobuild = "^2024.10.3"
+[tool.uv]
+package = false
